--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,20 @@
   </head>
 
   <body>
-<% flash.each do |name, msg| %>
-<%= content_tag :div, msg, :id => "flash_#{name}" %>
-<% end %>
-
+  <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, :id => "flash_#{name}" %>
+  <% end %>
     <%= yield %>
   </body>
+
+</html>
+
 <p>
   <% if current_user %>
-    Logged in as <%= current_user.username %>.
+    Logged in as <%= current_user.name %>.
     <%= link_to "Sign Out", signed_out_path %>
   <% else %>
     <%= link_to "Sign up", new_user_path %> or
     <%= link_to "Sign In", sign_in_path %>
   <% end %>
 </p>
-</html>
