--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,11 @@
-<p>Welcome Our Receipt Manager Website</p>
+<p>Welcome Our Receipt Manager Website </p>
+<p>
+  <% if current_user %>
+    Logged in as <%= current_user.name %>.
+    <%= link_to "Sign Out", signed_out_path %>
+  <% else %>
+    <%= link_to "Sign up", new_user_path %> or
+    <%= link_to "Sign In", sign_in_path %>
+  <% end %>
+</p>
 
