--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -2,9 +2,17 @@
 
 <h1>Receipts</h1>
 
-<table>
+
+<table id=" receipts">
   <thead>
     <tr>
+      <style>
+        th {
+          background-color: gray;
+          color: white;
+          font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+        }
+        </style>
       <th>Location</th>
       <th>Date</th>
       <th>Total cost</th>
@@ -18,6 +26,18 @@
   </thead>
 
   <tbody>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      padding: 8px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
     <% @receipts.each do |receipt| %>
       <tr>
         <td><%= receipt.location %></td>
