--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,15 +5,34 @@
 <table>
   <thead>
     <tr>
+      <style>
+        th {
+          background-color: gray;
+          color: white;
+          font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+        }
+      </style>
       <th>Name</th>
       <th>Email</th>
       <th>Password</th>
-      <th>Userid</th>
+      <th>User Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      padding: 8px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
