Adding / Displaying a photo of the receipt and tag entities has been done.

--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -25,6 +25,16 @@
   <%= @receipt.image %>
 </p>
 
+<% if @receipt.receipt_image.attached? %>
+  <!-- @post.image.present? will always return true, use attached? to check presence -->
+  <p>
+    <strong>Image:</strong>
+    <br>
+    <%= image_tag @receipt.receipt_image %>
+  </p>
+<% end %>
+
+
 <p>
   <strong>Receipt owner:</strong>
   <%= @receipt.receipt_owner %>
