--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -25,6 +25,11 @@
     <%= form.label :tagfoto %>
     <%= form.text_field :tagfoto %>
   </div>
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
 
   <div class="field">
     <%= form.label :tagid %>
