--- a/app/views/receipts/_form.html.erb
+++ b/app/views/receipts/_form.html.erb
@@ -35,6 +35,10 @@
     <%= form.label :image %>
     <%= form.text_field :image %>
   </div>
+  <div class="field">
+    <%= form.label :receipt_image %>
+    <%= form.file_field :receipt_image %>
+  </div>
 
   <div class="field">
     <%= form.label :receipt_owner %>
