--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -1,7 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Receipts</h1>
+<h2><strong>Search for receipts:</strong></h2>
 
+<%= form_tag(receipts_path,method: :get) do %>
+  <%= text_field_tag(:search, params[:search]) %>
+  <%= submit_tag 'Search..', name: nil  %>
+<% end %>
 
 <table id=" receipts">
   <thead>
@@ -17,10 +22,10 @@
       <th>Date</th>
       <th>Total cost</th>
       <th>Tax</th>
-      <th>Image</th>
+      <!--<th>Image</th> -->
       <th>Receipt owner</th>
       <th>Receipt tag</th>
-      <th>Fatura</th>
+      <th>Receipt_id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -44,7 +49,7 @@
         <td><%= receipt.date %></td>
         <td><%= receipt.total_cost %></td>
         <td><%= receipt.tax %></td>
-        <td><%= receipt.image %></td>
+       <!-- <td><%= receipt.image %></td> -->
         <td><%= receipt.receipt_owner %></td>
         <td><%= receipt.receipt_tag_id %></td>
         <td><%= receipt.fatura_id %></td>
