--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,10 @@
 <p>
   <% if current_user %>
     Logged in as <%= current_user.name %>.
-    <%= link_to "Sign Out", signed_out_path %>
+    
+    <%= link_to  "Sign Out", signed_out_path %>
   <% else %>
-    <%= link_to "Sign up", new_user_path %> or
+    <%= link_to "Sign up", new_user_path, class: "index-link"  %> or
     <%= link_to "Sign In", sign_in_path %>
   <% end %>
 </p>
