--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <p id="notice"><%= notice %></p>
+<p>
+  <strong>Kullanıcı Bilgileri:</strong>
+</p>
 
 <p>
   <strong>Name:</strong>
@@ -10,6 +13,7 @@
   <%= @user.email %>
 </p>
 
+<% if true %>
 <p>
   <strong>Password:</strong>
   <%= @user.password %>
@@ -19,6 +23,74 @@
   <strong>Userid:</strong>
   <%= @user.userid %>
 </p>
+<% end %>
+
+<p>
+  <strong>Faturalarım:</strong>
+  <% if false %>
+<%= link_to "Görüntüle", receipts_path() , :id => session[:userid]%>
+  <% end %>
+
+</p>
+
+
+  <table id=" receipts">
+    <thead>
+    <tr>
+      <style>
+        th {
+          background-color: gray;
+          color: white;
+          font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+        }
+      </style>
+      <th>Location</th>
+      <th>Date</th>
+      <th>Total cost</th>
+      <th>Tax</th>
+      <!--<th>Image</th> -->
+      <th>Receipt owner</th>
+      <th>Receipt tag</th>
+      <th>Receipt_id</th>
+      <th colspan="3"></th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <style>
+      table {
+        border-collapse: collapse;
+        width: 100%;
+      }
+
+      th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+      }
+    </style>
+    <% @receipts.each do |receipt| %>
+      <tr>
+        <td><%= receipt.location %></td>
+        <td><%= receipt.date %></td>
+        <td><%= receipt.total_cost %></td>
+        <td><%= receipt.tax %></td>
+        <!-- <td><%= receipt.image %></td> -->
+        <td><%= receipt.receipt_owner %></td>
+        <td><%= receipt.receipt_tag_id %></td>
+        <td><%= receipt.fatura_id %></td>
+        <td><%= link_to 'Show', receipt %></td>
+        <td><%= link_to 'Edit', edit_receipt_path(receipt) %></td>
+        <td><%= link_to 'Destroy', receipt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path %>|
+  <%= link_to 'New Receipt', new_receipt_path  %>
+
+
+
+  </html>
