--- a/app/views/receipts/show.html.erb
+++ b/app/views/receipts/show.html.erb
@@ -51,5 +51,57 @@
   <%= @receipt.fatura_id %>
 </p>
 
+
+<p>
+  <strong>Comments:</strong>
+  <% if false %>
+    <%= link_to "Görüntüle", receipts_path() , :id => session[:userid]%>
+  <% end %>
+
+</p>
+<table>
+  <thead>
+  <tr>
+    <style>
+      th {
+        background-color: gray;
+        color: white;
+        font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+      }
+    </style>
+    <th>Context</th>
+    <th>Comment owner</th>
+    <th>Which receipt</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+
+  <tbody>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      padding: 8px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
+  <% @comments.each do |comment| %>
+    <tr>
+      <td><%= comment.context %></td>
+      <td><%= comment.comment_owner %></td>
+      <td><%= comment.which_receipt_id %></td>
+      <td><%= link_to 'Show', comment %></td>
+      <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
+      <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+
 <%= link_to 'Edit', edit_receipt_path(@receipt) %> |
 <%= link_to 'Back', receipts_path %>
